--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.test-framework": "1.1.33",
-    "com.unity.ugui": "1.0.0",
-    "com.unity.xr.oculus": "4.0.0",
+    "com.unity.test-framework": "1.3.9",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.xr.meta-openxr": "1.0.1",
+    "com.unity.xr.oculus": "4.1.2",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
